--- a/src/components/organisms/battle-view/style.scss
+++ b/src/components/organisms/battle-view/style.scss
@@ -1,7 +1,22 @@
+.winner-info {
+  margin: 10px 0;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+}
+
 .battle-container {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+
+  &__card {
+    width: 100%;
+
+    .card {
+      width: 100%;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -12,7 +27,7 @@
     align-items: center;
     column-gap: 10px;
 
-    .card {
+    &__card {
       width: 50%;
     }
   }
@@ -20,7 +35,7 @@
 
 @media screen and (min-width: 768px) {
   .battle-container {
-    .card {
+    &__card {
       width: 35%;
     }
   }
