--- a/src/components/organisms/pokemons-list/style.scss
+++ b/src/components/organisms/pokemons-list/style.scss
@@ -10,6 +10,10 @@
     justify-content: center;
     margin-top: 20px;
   }
+
+  &__alert {
+    margin-bottom: 15px;
+  }
 }
 
 @media screen and (min-width: 768px) {
